[gd_scene load_steps=2 format=3 uid="uid://bmc8qgeccqy5m"]

[ext_resource type="Script" path="res://BrainVisualizer/UI/GenericElements/MultiItemCollapsible/MultiItemCollapsible.gd" id="1_55acr"]

[node name="MultiItemCollapsible" type="BoxContainer"]
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 12
script = ExtResource("1_55acr")

[node name="texture_button" type="TextureButton" parent="."]
custom_minimum_size = Vector2(16, 56)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Place_child_nodes_here" type="BoxContainer" parent="."]
layout_mode = 2

[connection signal="pressed" from="texture_button" to="." method="toggle"]
